@@ -1,3 +1,8 @@
+2008-08-01  Badlop  <badlop@process-one.net>
+
+	* src/web/ejabberd_http.erl: Temporary solution for check of
+	packet size when HTTPS (EJAB-611)(EJAB-507)(EJAB-574)
+
 2008-07-31  Badlop  <badlop@process-one.net>
 
 	* doc/guide.tex: Update Process-one name to ProcessOne (EJAB-708)
